{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 335,
  "lineage": "e93f4be0-1ba1-80c8-2986-f6342771fc69",
  "resources": [
    {
      "module": "module.application_tier",
      "mode": "managed",
      "type": "aws_lb",
      "name": "destination",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:580801916917:loadbalancer/app/destination-app-alb/e160f36a322b72d8",
            "arn_suffix": "app/destination-app-alb/e160f36a322b72d8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "destination-app-alb-1437956541.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:580801916917:loadbalancer/app/destination-app-alb/e160f36a322b72d8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "destination-app-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-05a3bf98f971216aa",
              "sg-0cfb2170ba542bb0b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08ccc7c97b7f8a5b5"
              },
              {
                "subnet_id": "subnet-0f0756e688b31c521"
              }
            ],
            "subnets": [
              "subnet-08ccc7c97b7f8a5b5",
              "subnet-0f0756e688b31c521"
            ],
            "tags": {
              "Name": "destination-app-alb"
            },
            "tags_all": {
              "Name": "destination-app-alb"
            },
            "vpc_id": "vpc-0625032ac3493034f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.security_groups_destination.aws_security_group.app_sg",
            "module.security_groups_destination.aws_security_group.rds_sg",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.application_tier",
      "mode": "managed",
      "type": "aws_lb",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:580801916917:loadbalancer/app/source-app-alb/5a07969902f659fe",
            "arn_suffix": "app/source-app-alb/5a07969902f659fe",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "source-app-alb-506714259.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:580801916917:loadbalancer/app/source-app-alb/5a07969902f659fe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "source-app-alb",
            "preserve_host_header": false,
            "region": "ca-central-1",
            "security_groups": [
              "sg-0775c1540b4242cca",
              "sg-0c10ff775965b4ce9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e016f1133c58a3bd"
              },
              {
                "subnet_id": "subnet-0ee37d0371085279a"
              }
            ],
            "subnets": [
              "subnet-0e016f1133c58a3bd",
              "subnet-0ee37d0371085279a"
            ],
            "tags": {
              "Name": "source-app-alb"
            },
            "tags_all": {
              "Name": "source-app-alb"
            },
            "vpc_id": "vpc-05802e24c59ff66ad",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.security_groups_source.aws_security_group.app_sg",
            "module.security_groups_source.aws_security_group.rds_sg",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.application_tier",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "destination",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:580801916917:listener/app/destination-app-alb/e160f36a322b72d8/4e1588996c744567",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:580801916917:targetgroup/destination-target-group/1385b47410431520",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:580801916917:listener/app/destination-app-alb/e160f36a322b72d8/4e1588996c744567",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:580801916917:loadbalancer/app/destination-app-alb/e160f36a322b72d8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_tier.aws_lb.destination",
            "module.application_tier.aws_lb_target_group.destination",
            "module.security_groups_destination.aws_security_group.app_sg",
            "module.security_groups_destination.aws_security_group.rds_sg",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.application_tier",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:580801916917:listener/app/source-app-alb/5a07969902f659fe/3dc6eab7934b2730",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:580801916917:targetgroup/source-target-group/3e3a196eb6350801",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:580801916917:listener/app/source-app-alb/5a07969902f659fe/3dc6eab7934b2730",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:580801916917:loadbalancer/app/source-app-alb/5a07969902f659fe",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ca-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_tier.aws_lb.source",
            "module.application_tier.aws_lb_target_group.source",
            "module.security_groups_source.aws_security_group.app_sg",
            "module.security_groups_source.aws_security_group.rds_sg",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.application_tier",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "destination",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:580801916917:targetgroup/destination-target-group/1385b47410431520",
            "arn_suffix": "targetgroup/destination-target-group/1385b47410431520",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:580801916917:targetgroup/destination-target-group/1385b47410431520",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:580801916917:loadbalancer/app/destination-app-alb/e160f36a322b72d8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "destination-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "destination-target-group"
            },
            "tags_all": {
              "Name": "destination-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.application_tier",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:580801916917:targetgroup/source-target-group/3e3a196eb6350801",
            "arn_suffix": "targetgroup/source-target-group/3e3a196eb6350801",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:580801916917:targetgroup/source-target-group/3e3a196eb6350801",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:580801916917:loadbalancer/app/source-app-alb/5a07969902f659fe"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "source-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ca-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "source-target-group"
            },
            "tags_all": {
              "Name": "source-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_destination",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:security-group/sg-05a3bf98f971216aa",
            "description": "Application security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a3bf98f971216aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "destination-app-sg",
            "name_prefix": "",
            "owner_id": "580801916917",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "destination"
            },
            "tags_all": {
              "Environment": "destination"
            },
            "timeouts": null,
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_destination",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:security-group/sg-0cfb2170ba542bb0b",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfb2170ba542bb0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05a3bf98f971216aa"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "destination-rds-sg",
            "name_prefix": "",
            "owner_id": "580801916917",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "destination"
            },
            "tags_all": {
              "Environment": "destination"
            },
            "timeouts": null,
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups_destination.aws_security_group.app_sg",
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_source",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:security-group/sg-0c10ff775965b4ce9",
            "description": "Application security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c10ff775965b4ce9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "source-app-sg",
            "name_prefix": "",
            "owner_id": "580801916917",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "source"
            },
            "tags_all": {
              "Environment": "source"
            },
            "timeouts": null,
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_source",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:security-group/sg-0775c1540b4242cca",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0775c1540b4242cca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c10ff775965b4ce9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "source-rds-sg",
            "name_prefix": "",
            "owner_id": "580801916917",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "source"
            },
            "tags_all": {
              "Environment": "source"
            },
            "timeouts": null,
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups_source.aws_security_group.app_sg",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ca9bb69be04265f",
            "arn": "arn:aws:ec2:ca-central-1:580801916917:elastic-ip/eipalloc-02ca9bb69be04265f",
            "association_id": "eipassoc-08ae24d7bc0761aa4",
            "domain": "vpc",
            "id": "eipalloc-02ca9bb69be04265f",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0b10af204ae08b334",
            "private_dns": "ip-10-0-1-58.ca-central-1.compute.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-15-156-148-129.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.156.148.129",
            "public_ipv4_pool": "amazon",
            "region": "ca-central-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e0184c67284c4bc",
            "arn": "arn:aws:ec2:ca-central-1:580801916917:elastic-ip/eipalloc-06e0184c67284c4bc",
            "association_id": "eipassoc-0203476835070d5b5",
            "domain": "vpc",
            "id": "eipalloc-06e0184c67284c4bc",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0ad9567704552989e",
            "private_dns": "ip-10-0-2-96.ca-central-1.compute.internal",
            "private_ip": "10.0.2.96",
            "public_dns": "ec2-16-52-112-245.ca-central-1.compute.amazonaws.com",
            "public_ip": "16.52.112.245",
            "public_ipv4_pool": "amazon",
            "region": "ca-central-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:internet-gateway/igw-0f899fbbfa3c2ab03",
            "id": "igw-0f899fbbfa3c2ab03",
            "owner_id": "580801916917",
            "region": "ca-central-1",
            "tags": {
              "Name": "primary-igw"
            },
            "tags_all": {
              "Name": "primary-igw"
            },
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ca9bb69be04265f",
            "association_id": "eipassoc-08ae24d7bc0761aa4",
            "connectivity_type": "public",
            "id": "nat-01950875fcec57023",
            "network_interface_id": "eni-0b10af204ae08b334",
            "private_ip": "10.0.1.58",
            "public_ip": "15.156.148.129",
            "region": "ca-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0856e5bd853c6f8d5",
            "tags": {
              "Name": "primary-natgw-0"
            },
            "tags_all": {
              "Name": "primary-natgw-0"
            }
          },
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e0184c67284c4bc",
            "association_id": "eipassoc-0203476835070d5b5",
            "connectivity_type": "public",
            "id": "nat-094d8b4c544fa2590",
            "network_interface_id": "eni-0ad9567704552989e",
            "private_ip": "10.0.2.96",
            "public_ip": "16.52.112.245",
            "region": "ca-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1f22cbd8dbbdc26",
            "tags": {
              "Name": "primary-natgw-1"
            },
            "tags_all": {
              "Name": "primary-natgw-1"
            }
          },
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b956fbbffb21292d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01950875fcec57023",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ca-central-1",
            "route_table_id": "rtb-0b956fbbffb21292d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_nat_gateway.this",
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e0111391a38d9671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-094d8b4c544fa2590",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ca-central-1",
            "route_table_id": "rtb-09e0111391a38d967",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_nat_gateway.this",
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:route-table/rtb-0b956fbbffb21292d",
            "id": "rtb-0b956fbbffb21292d",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01950875fcec57023",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primary-private-rt-0"
            },
            "tags_all": {
              "Name": "primary-private-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:route-table/rtb-09e0111391a38d967",
            "id": "rtb-09e0111391a38d967",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-094d8b4c544fa2590",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primary-private-rt-1"
            },
            "tags_all": {
              "Name": "primary-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:route-table/rtb-04e9b147dfb7b8828",
            "id": "rtb-04e9b147dfb7b8828",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f899fbbfa3c2ab03",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primary-public-rt"
            },
            "tags_all": {
              "Name": "primary-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d13bfe17ec1797c",
            "region": "ca-central-1",
            "route_table_id": "rtb-0b956fbbffb21292d",
            "subnet_id": "subnet-0ee37d0371085279a"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5f2f92b0a100637",
            "region": "ca-central-1",
            "route_table_id": "rtb-09e0111391a38d967",
            "subnet_id": "subnet-0e016f1133c58a3bd"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c974f66631d8e1d",
            "region": "ca-central-1",
            "route_table_id": "rtb-04e9b147dfb7b8828",
            "subnet_id": "subnet-0856e5bd853c6f8d5"
          },
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeaf158b59b5a390",
            "region": "ca-central-1",
            "route_table_id": "rtb-04e9b147dfb7b8828",
            "subnet_id": "subnet-0b1f22cbd8dbbdc26"
          },
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:subnet/subnet-0ee37d0371085279a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee37d0371085279a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "primary-private-0"
            },
            "tags_all": {
              "Name": "primary-private-0"
            },
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:subnet/subnet-0e016f1133c58a3bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e016f1133c58a3bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "primary-private-1"
            },
            "tags_all": {
              "Name": "primary-private-1"
            },
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:subnet/subnet-0856e5bd853c6f8d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0856e5bd853c6f8d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "primary-public-0"
            },
            "tags_all": {
              "Name": "primary-public-0"
            },
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:subnet/subnet-0b1f22cbd8dbbdc26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f22cbd8dbbdc26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "primary-public-1"
            },
            "tags_all": {
              "Name": "primary-public-1"
            },
            "vpc_id": "vpc-05802e24c59ff66ad"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:580801916917:vpc/vpc-05802e24c59ff66ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa49ca82d8f9f6df",
            "default_route_table_id": "rtb-0c0e53fa3b495bb2b",
            "default_security_group_id": "sg-08bf9c6be7d65d8c1",
            "dhcp_options_id": "dopt-084e858208c870787",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05802e24c59ff66ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0e53fa3b495bb2b",
            "owner_id": "580801916917",
            "region": "ca-central-1",
            "tags": {
              "Name": "primary"
            },
            "tags_all": {
              "Name": "primary"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f970effa5e3b045",
            "arn": "arn:aws:ec2:us-west-2:580801916917:elastic-ip/eipalloc-03f970effa5e3b045",
            "association_id": "eipassoc-096ceacc71769f9ac",
            "domain": "vpc",
            "id": "eipalloc-03f970effa5e3b045",
            "network_border_group": "us-west-2",
            "network_interface": "eni-05140b6739cc98a8c",
            "private_dns": "ip-10-1-1-246.us-west-2.compute.internal",
            "private_ip": "10.1.1.246",
            "public_dns": "ec2-52-11-240-190.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.240.190",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007da0b8c37967cb3",
            "arn": "arn:aws:ec2:us-west-2:580801916917:elastic-ip/eipalloc-007da0b8c37967cb3",
            "association_id": "eipassoc-02e02dedf8eb721aa",
            "domain": "vpc",
            "id": "eipalloc-007da0b8c37967cb3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-00f6b5cc6a07c41cc",
            "private_dns": "ip-10-1-2-162.us-west-2.compute.internal",
            "private_ip": "10.1.2.162",
            "public_dns": "ec2-35-161-177-108.us-west-2.compute.amazonaws.com",
            "public_ip": "35.161.177.108",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:internet-gateway/igw-08abb6ef5a4339485",
            "id": "igw-08abb6ef5a4339485",
            "owner_id": "580801916917",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary-igw"
            },
            "tags_all": {
              "Name": "secondary-igw"
            },
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f970effa5e3b045",
            "association_id": "eipassoc-096ceacc71769f9ac",
            "connectivity_type": "public",
            "id": "nat-0379c8dd5d2064032",
            "network_interface_id": "eni-05140b6739cc98a8c",
            "private_ip": "10.1.1.246",
            "public_ip": "52.11.240.190",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057f64fdda4fb4395",
            "tags": {
              "Name": "secondary-natgw-0"
            },
            "tags_all": {
              "Name": "secondary-natgw-0"
            }
          },
          "dependencies": [
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007da0b8c37967cb3",
            "association_id": "eipassoc-02e02dedf8eb721aa",
            "connectivity_type": "public",
            "id": "nat-08d655f3d0e83df77",
            "network_interface_id": "eni-00f6b5cc6a07c41cc",
            "private_ip": "10.1.2.162",
            "public_ip": "35.161.177.108",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0062149075f48cf4b",
            "tags": {
              "Name": "secondary-natgw-1"
            },
            "tags_all": {
              "Name": "secondary-natgw-1"
            }
          },
          "dependencies": [
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a12cf5f697c789e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0379c8dd5d2064032",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0a12cf5f697c789e8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_nat_gateway.this",
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-066ad6dbef31478001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08d655f3d0e83df77",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-066ad6dbef3147800",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_nat_gateway.this",
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:route-table/rtb-0a12cf5f697c789e8",
            "id": "rtb-0a12cf5f697c789e8",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0379c8dd5d2064032",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "secondary-private-rt-0"
            },
            "tags_all": {
              "Name": "secondary-private-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:route-table/rtb-066ad6dbef3147800",
            "id": "rtb-066ad6dbef3147800",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d655f3d0e83df77",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "secondary-private-rt-1"
            },
            "tags_all": {
              "Name": "secondary-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:route-table/rtb-0c421af96dda27b33",
            "id": "rtb-0c421af96dda27b33",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08abb6ef5a4339485",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "secondary-public-rt"
            },
            "tags_all": {
              "Name": "secondary-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c46d637414edfc6",
            "region": "us-west-2",
            "route_table_id": "rtb-0a12cf5f697c789e8",
            "subnet_id": "subnet-08ccc7c97b7f8a5b5"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1d1f2bd0f027d79",
            "region": "us-west-2",
            "route_table_id": "rtb-066ad6dbef3147800",
            "subnet_id": "subnet-0f0756e688b31c521"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f33a0880a6c41738",
            "region": "us-west-2",
            "route_table_id": "rtb-0c421af96dda27b33",
            "subnet_id": "subnet-057f64fdda4fb4395"
          },
          "dependencies": [
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025cfcca384e5b295",
            "region": "us-west-2",
            "route_table_id": "rtb-0c421af96dda27b33",
            "subnet_id": "subnet-0062149075f48cf4b"
          },
          "dependencies": [
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:subnet/subnet-08ccc7c97b7f8a5b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ccc7c97b7f8a5b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary-private-0"
            },
            "tags_all": {
              "Name": "secondary-private-0"
            },
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:subnet/subnet-0f0756e688b31c521",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0756e688b31c521",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary-private-1"
            },
            "tags_all": {
              "Name": "secondary-private-1"
            },
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:subnet/subnet-057f64fdda4fb4395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f64fdda4fb4395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary-public-0"
            },
            "tags_all": {
              "Name": "secondary-public-0"
            },
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:subnet/subnet-0062149075f48cf4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0062149075f48cf4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary-public-1"
            },
            "tags_all": {
              "Name": "secondary-public-1"
            },
            "vpc_id": "vpc-0625032ac3493034f"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].destination",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:vpc/vpc-0625032ac3493034f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03f3aa596e2d22e56",
            "default_route_table_id": "rtb-04af6d2c079a11a69",
            "default_security_group_id": "sg-02d8c91e2b6c2597c",
            "dhcp_options_id": "dopt-0e33a4fe1f890fb8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0625032ac3493034f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04af6d2c079a11a69",
            "owner_id": "580801916917",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary"
            },
            "tags_all": {
              "Name": "secondary"
            }
          }
        }
      ]
    }
  ]
}